--- a/project_one.ipynb
+++ b/project_one.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_3956\\3307008219.py:3: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
-      "  df = pd.read_csv('fhlmc_mf2023c_loans.txt', delim_whitespace=True,header=None, names = cols)\n"
+      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_3332\\3057614720.py:3: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
+      "  df = pd.read_csv('data/fhlmc_mf2023c_loans.txt', delim_whitespace=True,header=None, names = cols)\n"
      ]
     },
     {
@@ -208,7 +208,7 @@
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
    "source": [
     "import pandas as pd\n",
     "cols = [\"flag\",\"record_no\",\"postal_code\",\"msa_code\",\"cty_code\", \"tract\",\"pct_minority\",\"median_inc_tract\",\"ami\",\"tract_inc_ratio\",\"amfi\",\"upb\",\"purpose\",\"seller_type\",\"guarantee\",\"lien_status\",\"LTV\",\"date\",\"term_at_org\",\"num_of_units\",\"int_rate\",\"note_amt\",\"prop_val\",\"pre_pen\",\"balloon\",\"26\",\"27\",\"28\",\"29\",\"30\",\"31\",\"32\",\"33\",\"34\",\"35\",\"36\",\"38\"]\n",
-    "df = pd.read_csv('fhlmc_mf2023c_loans.txt', delim_whitespace=True,header=None, names = cols)\n",
+    "df = pd.read_csv('data/fhlmc_mf2023c_loans.txt', delim_whitespace=True,header=None, names = cols)\n",
     "df.head()"
    ]
   },
