--- a/project_one.ipynb
+++ b/project_one.ipynb
@@ -1,6 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Effect of Municipal Permitting on Local Housing Markets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I am using the **Fannie Mae and Freddie Mac** data. I'm interested to look at the lending data as a proxy for housing sales, and to analyze either the effects of municipal permitting on housing markets on a MSA-to-MSA level, or look at how the ownership structure of housing differs between \"high opportunity\" and \"low opportunity\" areas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Loading"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because the data is in ``.txt`` format, with no column headers, and is in many different files for different years and loan types, significant data cleaning is required. To begin, we set up short titles for each column based on the data dictionary provided."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -240,6 +275,27 @@
    ],
    "source": [
     "df[[\"ami\",\"tract\"]].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary Statistics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plots \\& Figures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
    ]
   }
  ],
