renamed df to prepare for more years

--- a/project_one.ipynb
+++ b/project_one.ipynb
@@ -37,6 +37,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -81,7 +90,7 @@
        "      <th>34</th>\n",
        "      <th>35</th>\n",
        "      <th>36</th>\n",
-       "      <th>38</th>\n",
+       "      <th>37</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -205,34 +214,196 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2866</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2867</td>\n",
+       "      <td>48</td>\n",
+       "      <td>19100</td>\n",
+       "      <td>113</td>\n",
+       "      <td>14148</td>\n",
+       "      <td>86.40</td>\n",
+       "      <td>75948</td>\n",
+       "      <td>91127</td>\n",
+       "      <td>0.8334</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2867</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2868</td>\n",
+       "      <td>37</td>\n",
+       "      <td>39580</td>\n",
+       "      <td>183</td>\n",
+       "      <td>53003</td>\n",
+       "      <td>33.58</td>\n",
+       "      <td>100991</td>\n",
+       "      <td>102904</td>\n",
+       "      <td>0.9814</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2868</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2869</td>\n",
+       "      <td>55</td>\n",
+       "      <td>99999</td>\n",
+       "      <td>97</td>\n",
+       "      <td>960900</td>\n",
+       "      <td>15.89</td>\n",
+       "      <td>73125</td>\n",
+       "      <td>87203</td>\n",
+       "      <td>0.8386</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2869</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2870</td>\n",
+       "      <td>55</td>\n",
+       "      <td>24580</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>31.46</td>\n",
+       "      <td>85583</td>\n",
+       "      <td>86230</td>\n",
+       "      <td>0.9925</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2870</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2871</td>\n",
+       "      <td>42</td>\n",
+       "      <td>37980</td>\n",
+       "      <td>101</td>\n",
+       "      <td>24700</td>\n",
+       "      <td>94.07</td>\n",
+       "      <td>54356</td>\n",
+       "      <td>100853</td>\n",
+       "      <td>0.5390</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 37 columns</p>\n",
+       "<p>5468 rows × 37 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   flag  record_no  postal_code  msa_code  cty_code  tract  pct_minority  \\\n",
-       "0     2          1           37     20500        63   1708         90.17   \n",
-       "1     2          2           12     33100        86   9904         98.03   \n",
-       "2     2          3           47     32820       157   6500         98.76   \n",
-       "3     2          4           45     24860        45   2821         29.70   \n",
-       "4     2          5           48     12420       209  10919         68.38   \n",
+       "      flag  record_no  postal_code  msa_code  cty_code   tract  pct_minority  \\\n",
+       "0        2          1           37     20500        63    1708         90.17   \n",
+       "1        2          2           12     33100        86    9904         98.03   \n",
+       "2        2          3           47     32820       157    6500         98.76   \n",
+       "3        2          4           45     24860        45    2821         29.70   \n",
+       "4        2          5           48     12420       209   10919         68.38   \n",
+       "...    ...        ...          ...       ...       ...     ...           ...   \n",
+       "2866     1       2867           48     19100       113   14148         86.40   \n",
+       "2867     1       2868           37     39580       183   53003         33.58   \n",
+       "2868     1       2869           55     99999        97  960900         15.89   \n",
+       "2869     1       2870           55     24580         9    2002         31.46   \n",
+       "2870     1       2871           42     37980       101   24700         94.07   \n",
        "\n",
-       "   median_inc_tract     ami  tract_inc_ratio  ...  28   29  30  31  32  33  \\\n",
-       "0             82543   91167           0.9054  ...   9    0   1   0   0   0   \n",
-       "1             44931   73392           0.6122  ...   9  100   1   0   0   0   \n",
-       "2             46375   72130           0.6429  ...   9  100   1   0   1   0   \n",
-       "3             96463   75341           1.2804  ...   9    0   1   0   0   0   \n",
-       "4             75045  105379           0.7121  ...   9    0   1   0   0   0   \n",
+       "      median_inc_tract     ami  tract_inc_ratio  ...  28   29  30  31  32  33  \\\n",
+       "0                82543   91167           0.9054  ...   9    0   1   0   0   0   \n",
+       "1                44931   73392           0.6122  ...   9  100   1   0   0   0   \n",
+       "2                46375   72130           0.6429  ...   9  100   1   0   1   0   \n",
+       "3                96463   75341           1.2804  ...   9    0   1   0   0   0   \n",
+       "4                75045  105379           0.7121  ...   9    0   1   0   0   0   \n",
+       "...                ...     ...              ...  ...  ..  ...  ..  ..  ..  ..   \n",
+       "2866             75948   91127           0.8334  ...   9    0   1   0   0   0   \n",
+       "2867            100991  102904           0.9814  ...   9    0   1   0   0   0   \n",
+       "2868             73125   87203           0.8386  ...   9    0   1   1   0   0   \n",
+       "2869             85583   86230           0.9925  ...   9    0   1   0   0   0   \n",
+       "2870             54356  100853           0.5390  ...   9    0   1   0   0   0   \n",
        "\n",
-       "   34  35  36  38  \n",
-       "0   0   0   0   0  \n",
-       "1   0   0   0   0  \n",
-       "2   0   1   0   0  \n",
-       "3   0   0   0   0  \n",
-       "4   0   0   0   0  \n",
+       "      34  35  36  37  \n",
+       "0      0   0   0   0  \n",
+       "1      0   0   0   0  \n",
+       "2      0   1   0   0  \n",
+       "3      0   0   0   0  \n",
+       "4      0   0   0   0  \n",
+       "...   ..  ..  ..  ..  \n",
+       "2866   0   0   0   0  \n",
+       "2867   0   0   0   0  \n",
+       "2868   0   0   0   0  \n",
+       "2869   0   1   0   0  \n",
+       "2870   1   1   0   0  \n",
        "\n",
-       "[5 rows x 37 columns]"
+       "[5468 rows x 37 columns]"
       ]
      },
      "execution_count": 5,
@@ -241,9 +412,17 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "cols = [\"flag\",\"record_no\",\"postal_code\",\"msa_code\",\"cty_code\", \"tract\",\"pct_minority\",\"median_inc_tract\",\"ami\",\"tract_inc_ratio\",\"amfi\",\"upb\",\"purpose\",\"seller_type\",\"guarantee\",\"lien_status\",\"LTV\",\"date\",\"term_at_org\",\"num_of_units\",\"int_rate\",\"note_amt\",\"prop_val\",\"pre_pen\",\"balloon\",\"26\",\"27\",\"28\",\"29\",\"30\",\"31\",\"32\",\"33\",\"34\",\"35\",\"36\",\"38\"]\n",
-    "df = pd.read_csv('data/fhlmc_mf2023c_loans.txt', sep=r'\\s+', header=None, names = cols)"
+    "cols = [\"flag\",\"record_no\",\"postal_code\",\"msa_code\",\"cty_code\", \"tract\",\"pct_minority\",\"median_inc_tract\",\"ami\",\"tract_inc_ratio\",\"amfi\",\"upb\",\"purpose\",\"seller_type\",\"guarantee\",\"lien_status\",\"LTV\",\"date\",\"term_at_org\",\"num_of_units\",\"int_rate\",\"note_amt\",\"prop_val\",\"pre_pen\",\"balloon\",\"26\",\"27\",\"28\",\"29\",\"30\",\"31\",\"32\",\"33\",\"34\",\"35\",\"36\",\"37\"]\n",
+    "loans_2023 = pd.read_csv('data/fhlmc_mf2023c_loans.txt', sep=r'\\s+', header=None, names = cols)\n",
+    "loans_2023 = pd.concat([loans_2023, pd.read_csv('data/fnma_mf2023c_loans.txt', sep=r'\\s+', header=None, names = cols)])\n",
+    "loans_2023"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary Statistics"
    ]
   },
   {
@@ -254,9 +433,18 @@
     {
      "data": {
       "text/plain": [
-       "ami      109510.588371\n",
-       "tract    133945.958799\n",
-       "dtype: float64"
+       "msa_code\n",
+       "35620    570\n",
+       "16980    250\n",
+       "99999    233\n",
+       "19100    200\n",
+       "18140    154\n",
+       "12060    151\n",
+       "31080    143\n",
+       "26420    139\n",
+       "38060    115\n",
+       "42660    114\n",
+       "dtype: int64"
       ]
      },
      "execution_count": 6,
@@ -265,14 +453,7 @@
     }
    ],
    "source": [
-    "df[[\"ami\",\"tract\"]].mean()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Summary Statistics"
+    "loans_2023.groupby('msa_code').size().sort_values(ascending=False).head(10)"
    ]
   },
   {
