updated writing, cleaned up

--- a/project_one.ipynb
+++ b/project_one.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Because the data is in ``.txt`` format, with no column headers, and is in many different files for different years and loan types, significant data cleaning is required. To begin, we set up short titles for each column based on the data dictionary provided."
+    "We start by loading libraries. For dataframes we are using `pandas`, for plots we are using `pyplot` from `matplotlib`."
    ]
   },
   {
@@ -46,14 +46,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because the data is in ``.txt`` format, with no column headers, and is in many different files for different years and loan types, significant data cleaning is required. To begin, we set up short titles for each column based on the data dictionary provided, and then combine the Freddie and Fannie data into one dataframe for the year."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "cols = [\"flag\",\"record_no\",\"postal_code\",\"msa_code\",\"cty_code\", \"tract\",\"pct_minority\",\"median_inc_tract\",\"ami\",\"tract_inc_ratio\",\"amfi\",\"upb\",\"purpose\",\"seller_type\",\"guarantee\",\"lien_status\",\"LTV\",\"date\",\"term_at_org\",\"num_of_units\",\"int_rate\",\"note_amt\",\"prop_val\",\"pre_pen\",\"balloon\",\"26\",\"27\",\"28\",\"29\",\"30\",\"31\",\"32\",\"33\",\"34\",\"35\",\"36\",\"37\"]\n",
-    "loans_2023 = pd.read_csv('data/fhlmc_mf2023c_loans.txt', sep=r'\\s+', header=None, names = cols)\n",
-    "loans_2023 = pd.concat([loans_2023, pd.read_csv('data/fnma_mf2023c_loans.txt', sep=r'\\s+', header=None, names = cols)])\n",
+    "freddie_2023 = pd.read_csv('data/fhlmc_mf2023c_loans.txt', sep=r'\\s+', header=None, names = cols)\n",
+    "fannie_2023 = pd.read_csv('data/fnma_mf2023c_loans.txt', sep=r'\\s+', header=None, names = cols)\n",
+    "loans_2023 = pd.concat([freddie_2023, fannie_2023])\n",
     "# msa_codes = pd.read_csv('data/MSA_2023.txt', sep=r'\\s+', header=None, names = [\"msa_code\",\"msa_name\"])\n",
     "# msa_codes"
    ]
@@ -66,12 +74,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One potentially interesting summary statistic is the quantity of loans in 2023 in each metropolitan area. We use ``groupby`` to look at each individual MSA and the count of entries in the table for each to define ``vol_by_msa`` which is the loan volume in each MSA."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "msas = loans_2023.groupby('msa_code').size().sort_values(ascending=False).head(10)"
+    "vol_by_msa = loans_2023.groupby('msa_code').size().sort_values(ascending=False)"
    ]
   },
   {
@@ -83,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +113,7 @@
     }
    ],
    "source": [
-    "msas.plot(kind='bar', figsize=(7, 4))\n",
+    "vol_by_msa.head(10).plot(kind='bar', figsize=(7, 4))\n",
     "plt.title('Top 10 MSAs by 2023 Multifamily Loan Count')\n",
     "plt.xlabel('MSA Code')\n",
     "plt.ylabel('Loan Count')\n",
