--- a/project_one.ipynb
+++ b/project_one.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Effect of Municipal Permitting on Local Housing Markets"
+    "# Proximity to Public Transit \\& Housing Affordability"
    ]
   },
   {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,14 +54,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cols = [\"flag\",\"record_no\",\"postal_code\",\"msa_code\",\"cty_code\", \"tract\",\"pct_minority\",\"median_inc_tract\",\"ami\",\"tract_inc_ratio\",\"amfi\",\"upb\",\"purpose\",\"seller_type\",\"guarantee\",\"lien_status\",\"LTV\",\"date\",\"term_at_org\",\"num_of_units\",\"int_rate\",\"note_amt\",\"prop_val\",\"pre_pen\",\"balloon\",\"26\",\"27\",\"28\",\"29\",\"30\",\"31\",\"32\",\"33\",\"34\",\"35\",\"36\",\"37\"]\n",
+    "cols = [\"flag\",\"record_no\",\"postal_code\",\"msa_code\",\"cty_code\", \"tract\",\"pct_minority\",\"median_inc_tract\",\"ami\",\"tract_inc_ratio\",\"amfi\",\"upb\",\"purpose\",\"seller_type\",\"guarantee\",\"lien_status\",\"LTV\",\"date\",\"term_at_org\",\"num_of_units\",\"int_rate\",\"note_amt\",\"prop_val\",\"pre_pen\",\"balloon\",\"interest_only\",\"neg_amortization\",\"other_nfaf\",\"pct_affordable\",\"construction_method\",\"rural\",\"LMDC\",\"MAC\",\"PPC\",\"ACP\",\"HOA\",\"Colonias\"]\n",
     "freddie_2023 = pd.read_csv('data/fhlmc_mf2023c_loans.txt', sep=r'\\s+', header=None, names = cols)\n",
     "fannie_2023 = pd.read_csv('data/fnma_mf2023c_loans.txt', sep=r'\\s+', header=None, names = cols)\n",
-    "loans_2023 = pd.concat([freddie_2023, fannie_2023])\n",
+    "mf_loans_2023 = pd.concat([freddie_2023, fannie_2023])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In addition, we want to have some dictionaries to decode data. For example, in the `loans` dataframe, each metropolitan area is given by its \"MSA code\", which means nothing to us. Rather, we want to know the MSA name."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# msa_codes = pd.read_csv('data/MSA_2023.txt', sep=r'\\s+', header=None, names = [\"msa_code\",\"msa_name\"])\n",
     "# msa_codes"
    ]
@@ -82,11 +97,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vol_by_msa = loans_2023.groupby('msa_code').size().sort_values(ascending=False)"
+    "vol_by_msa = mf_loans_2023.groupby('msa_code').size().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pct_minority</th>\n",
+       "      <th>median_inc_tract</th>\n",
+       "      <th>LTV</th>\n",
+       "      <th>num_of_units</th>\n",
+       "      <th>note_amt</th>\n",
+       "      <th>int_rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>5468.000000</td>\n",
+       "      <td>5468.000000</td>\n",
+       "      <td>5468.000000</td>\n",
+       "      <td>5468.000000</td>\n",
+       "      <td>5.468000e+03</td>\n",
+       "      <td>5468.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>53.414276</td>\n",
+       "      <td>95970.101500</td>\n",
+       "      <td>61.425642</td>\n",
+       "      <td>3.818581</td>\n",
+       "      <td>2.407242e+07</td>\n",
+       "      <td>5.975040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>26.730757</td>\n",
+       "      <td>121930.260639</td>\n",
+       "      <td>37.455017</td>\n",
+       "      <td>1.901836</td>\n",
+       "      <td>5.507027e+07</td>\n",
+       "      <td>3.650544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>4.770000</td>\n",
+       "      <td>2499.000000</td>\n",
+       "      <td>1.900000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.150000e+05</td>\n",
+       "      <td>0.840000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>30.427500</td>\n",
+       "      <td>53063.500000</td>\n",
+       "      <td>54.467500</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>4.222500e+06</td>\n",
+       "      <td>5.340000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>50.790000</td>\n",
+       "      <td>73061.000000</td>\n",
+       "      <td>61.400000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1.194000e+07</td>\n",
+       "      <td>5.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>76.700000</td>\n",
+       "      <td>101589.750000</td>\n",
+       "      <td>65.600000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>3.052750e+07</td>\n",
+       "      <td>6.270000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>99.860000</td>\n",
+       "      <td>999999.000000</td>\n",
+       "      <td>999.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>1.000000e+09</td>\n",
+       "      <td>99.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       pct_minority  median_inc_tract          LTV  num_of_units  \\\n",
+       "count   5468.000000       5468.000000  5468.000000   5468.000000   \n",
+       "mean      53.414276      95970.101500    61.425642      3.818581   \n",
+       "std       26.730757     121930.260639    37.455017      1.901836   \n",
+       "min        4.770000       2499.000000     1.900000      1.000000   \n",
+       "25%       30.427500      53063.500000    54.467500      2.000000   \n",
+       "50%       50.790000      73061.000000    61.400000      4.000000   \n",
+       "75%       76.700000     101589.750000    65.600000      5.000000   \n",
+       "max       99.860000     999999.000000   999.000000      9.000000   \n",
+       "\n",
+       "           note_amt     int_rate  \n",
+       "count  5.468000e+03  5468.000000  \n",
+       "mean   2.407242e+07     5.975040  \n",
+       "std    5.507027e+07     3.650544  \n",
+       "min    3.150000e+05     0.840000  \n",
+       "25%    4.222500e+06     5.340000  \n",
+       "50%    1.194000e+07     5.750000  \n",
+       "75%    3.052750e+07     6.270000  \n",
+       "max    1.000000e+09    99.000000  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mf_loans_2023[[\"pct_minority\", \"median_inc_tract\", \"LTV\",\"num_of_units\",\"note_amt\",\"int_rate\"]].describe()"
    ]
   },
   {
@@ -98,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +287,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -144,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
