updated, moved repo

--- a/project_one.ipynb
+++ b/project_one.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Proximity to Public Transit \\& Housing Affordability"
+    "# Blockbusting in the 21st Century?: Minority Move-ins and Neighborhood Home Value Appreciation"
    ]
   },
   {
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I am using the **Fannie Mae and Freddie Mac** data. I'm interested to look at the lending data as a proxy for housing sales, and to analyze either the effects of municipal permitting on housing markets on a MSA-to-MSA level, or look at how the ownership structure of housing differs between \"high opportunity\" and \"low opportunity\" areas."
+    "I am using the **Fannie Mae (FNMA) \\& Freddie Mac (FHLMC)** data to analyze the demographics of move-ins on a census-tract level. This, with the census-level demographic data **(ACS)**, can provide an estimate of a quantity of minority \"move-ins\". I am seeing the extent to which this has an effect on the appreciation in home values (**Zillow ZHVI**)"
    ]
   },
   {
@@ -58,7 +58,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cols = [\"flag\",\"record_no\",\"postal_code\",\"msa_code\",\"cty_code\", \"tract\",\"pct_minority\",\"median_inc_tract\",\"ami\",\"tract_inc_ratio\",\"amfi\",\"upb\",\"purpose\",\"seller_type\",\"guarantee\",\"lien_status\",\"LTV\",\"date\",\"term_at_org\",\"num_of_units\",\"int_rate\",\"note_amt\",\"prop_val\",\"pre_pen\",\"balloon\",\"interest_only\",\"neg_amortization\",\"other_nfaf\",\"pct_affordable\",\"construction_method\",\"rural\",\"LMDC\",\"MAC\",\"PPC\",\"ACP\",\"HOA\",\"Colonias\"]\n",
     "cols = [\n",
     "    \"Enterprise Flag\",\n",
     "    \"Record Number\",\n",
@@ -124,10 +123,7 @@
     "    \"Property Appraisal Review Date Missing Indicator\",\n",
     "    \"Property Appraisal Review Value\",\n",
     "    \"Property Appraisal Review Value Missing Indicator\"\n",
-    "]\n",
-    "freddie_2023 = pd.read_csv('data/fhlmc_mf2023c_loans.txt', sep=r'\\s+', header=None, names = cols)\n",
-    "fannie_2023 = pd.read_csv('data/fnma_mf2023c_loans.txt', sep=r'\\s+', header=None, names = cols)\n",
-    "mf_loans_2023 = pd.concat([freddie_2023, fannie_2023])"
+    "]"
    ]
   },
   {
@@ -138,11 +134,11 @@
    "source": [
     "fhlmc_sf2023 = pd.read_csv('data/fhlmc_sf2023c_loans.txt', sep=r'\\s+', header=None, names = cols)\n",
     "fnma_sf2023 = pd.read_csv('data/fnma_sf2023c_loans.txt', sep=r'\\s+', header=None, names = cols)\n",
-    "sf_loans_2023 = pd.concat([fhlmc_sf2023, fnma_sf2023])\n",
+    "loans_2023 = pd.concat([fhlmc_sf2023, fnma_sf2023])\n",
     "\n",
     "fhlmc_sf2018 = pd.read_csv('data/fhlmc_sf2018c_loans.txt', sep=r'\\s+', header=None, names = cols)\n",
     "fnma_sf2018 = pd.read_csv('data/fnma_sf2018c_loans.txt', sep=r'\\s+', header=None, names = cols)\n",
-    "sf_loans_2018 = pd.concat([fhlmc_sf2018, fnma_sf2018])"
+    "loans_2018 = pd.concat([fhlmc_sf2018, fnma_sf2018])"
    ]
   },
   {
@@ -170,7 +166,7 @@
    ],
    "source": [
     "msa_codes = pd.read_csv('data/MSA_2023.txt', sep='\\s+=\\s+', header=None, engine='python', names=['msa_code', 'msa_name'])\n",
-    "mf_loans_2023 = mf_loans_2023.merge(msa_codes, on='msa_code', how='left')"
+    "loans = loans.merge(msa_codes, on='msa_code', how='left')"
    ]
   },
   {
@@ -185,15 +181,6 @@
    "metadata": {},
    "source": [
     "One potentially interesting summary statistic is the quantity of loans in 2023 in each metropolitan area. We use ``groupby`` to look at each individual MSA and the count of entries in the table for each to define ``vol_by_msa`` which is the loan volume in each MSA."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vol_by_msa = mf_loans_2023.groupby('msa_name').size().sort_values(ascending=False)"
    ]
   },
   {
