separate out extraneous code

--- a/project_one.ipynb
+++ b/project_one.ipynb
@@ -18,7 +18,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I am using the [**Fannie Mae (FNMA) \\& Freddie Mac (FHLMC)**](https://web.archive.org/web/20240914151448/https://www.fhfa.gov/data/single-family-census-tract-file) data to analyze the demographics of move-ins on a census-tract level. This, with the census-level demographic data **(ACS)**, can provide an estimate of a quantity of minority \"move-ins\". I am seeing the extent to which this has an effect on the appreciation in home values (**Zillow ZHVI**)"
+    "I am using the [**Fannie Mae (FNMA) \\& Freddie Mac (FHLMC)**](https://web.archive.org/web/20240914151448/https://www.fhfa.gov/data/single-family-census-tract-file) data to analyze the demographics of move-ins on a census-tract level. This, with the census-level demographic data **(ACS)**, can provide an estimate of a quantity of minority \"move-ins\". I am seeing the extent to which this has an effect on the appreciation in home values (**Zillow ZHVI**)\n",
+    "\n",
+    "My **y-variable** is census-tract property value appreciation. My main **explanatory variables** are minority move-ins and previous neighborhood demographics. I will be controlling for income."
    ]
   },
   {
@@ -37,19 +39,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import ipumspy.readers as readers # For census data (retrived from IPUMS)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Because the data is in ``.txt`` format, with no column headers, and is in many different files for different years and loan types, some light data cleaning is required. To begin, we set up short titles for each column based on the data dictionary provided, and then combine the Freddie and Fannie data into one dataframe for the year."
+    "Because the data is in ``.txt`` format, with no column headers, and is in many different files for different years and loan types, some light data cleaning is required. To begin, we set up short titles for each column based on the data dictionary provided, and create a list of columns we do not need."
    ]
   },
   {
@@ -148,31 +151,75 @@
     "    \"concentrated_poverty\",\n",
     "    \"high_opportunity\",\n",
     "    \"qoz_tract\",\n",
+    "]\n",
+    "cols_pre2018 = [\n",
+    "    \"enterprise_flag\",\n",
+    "    \"record_number\",\n",
+    "    \"state_fips\",\n",
+    "    \"msa_code\",\n",
+    "    \"county_fips\",\n",
+    "    \"census_tract\",\n",
+    "    \"tract_pct_minority\",\n",
+    "    \"tract_median_income\",\n",
+    "    \"local_median_income\",\n",
+    "    \"tract_income_ratio\",\n",
+    "    \"borrower_income\",\n",
+    "    \"area_median_income\",\n",
+    "    \"borrower_income_ratio\",\n",
+    "    \"upb_acquisition\",\n",
+    "    \"purpose\",\n",
+    "    \"fed_guarantee\",\n",
+    "    \"num_borrowers\",\n",
+    "    \"first_time_homebuyer\",\n",
+    "    \"borrower_race\",\n",
+    "    \"borrower_ethnicity\",\n",
+    "    \"coborrower_race\",\n",
+    "    \"coborrower_ethnicity\",\n",
+    "    \"borrower_gender\",\n",
+    "    \"coborrower_gender\",\n",
+    "    \"borrwer_age\",\n",
+    "    \"coborrower_age\",\n",
+    "    \"occupancy_code\",\n",
+    "    \"rate_spread\",\n",
+    "    \"hoepa_status\",\n",
+    "    \"property_type\",\n",
+    "    \"lien_status\",\n",
+    "]\n",
+    "dropcols_pre2018 = [\n",
+    "    \"enterprise_flag\",\n",
+    "    \"record_number\",\n",
+    "    \"borrower_income\",\n",
+    "    \"upb_acquisition\",\n",
+    "    \"purpose\",\n",
+    "    \"fed_guarantee\",\n",
+    "    \"rate_spread\",\n",
+    "    \"hoepa_status\",\n",
+    "    \"property_type\",\n",
+    "    \"lien_status\",\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "loans = pd.DataFrame()\n",
-    "for year in range(2018, 2023):\n",
-    "    loans_year = pd.concat([\n",
-    "        pd.read_csv(f'data/sf/fhlmc_sf{year}c_loans.txt', sep=r'\\s+', header=None, names=cols).drop(columns=dropcols),\n",
-    "        pd.read_csv(f'data/sf/fnma_sf{year}c_loans.txt', sep=r'\\s+', header=None, names=cols).drop(columns=dropcols)])\n",
-    "    loans_year[\"year\"] = year\n",
-    "    loans = pd.concat([loans, loans_year])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m year \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m2018\u001b[39m, \u001b[38;5;241m2023\u001b[39m):\n\u001b[0;32m      5\u001b[0m     files \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata/sf/fhlmc_sf\u001b[39m\u001b[38;5;132;01m{\u001b[39;00myear\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124mc_loans.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata/sf/fnma_sf\u001b[39m\u001b[38;5;132;01m{\u001b[39;00myear\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124mc_loans.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m----> 6\u001b[0m     loans_year \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mconcat(\n\u001b[0;32m      7\u001b[0m         [pd\u001b[38;5;241m.\u001b[39mread_csv(file, sep\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124ms+\u001b[39m\u001b[38;5;124m\"\u001b[39m, header\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, names\u001b[38;5;241m=\u001b[39mcols)\u001b[38;5;241m.\u001b[39mdrop(columns\u001b[38;5;241m=\u001b[39mdropcols) \u001b[38;5;28;01mfor\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m files],\n\u001b[0;32m      8\u001b[0m         ignore_index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m      9\u001b[0m     )\n\u001b[0;32m     10\u001b[0m     loans_year[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myear\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m year\n\u001b[0;32m     11\u001b[0m     loans_list\u001b[38;5;241m.\u001b[39mappend(loans_year)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "loans_list = []\n",
+    "\n",
+    "# Loans from 2018-2023 (new system)\n",
     "for year in range(2018, 2023):\n",
     "    files = [f\"data/sf/fhlmc_sf{year}c_loans.txt\", f\"data/sf/fnma_sf{year}c_loans.txt\"]\n",
     "    loans_year = pd.concat(\n",
@@ -181,36 +228,70 @@
     "    )\n",
     "    loans_year[\"year\"] = year\n",
     "    loans_list.append(loans_year)\n",
+    "    print(f\"Processed {year}\")\n",
+    "print(\"First data done.\")\n",
     "\n",
-    "loans = pd.concat(loans_list, ignore_index=True)"
+    "# Loans from 2008-2017 (old system)\n",
+    "for year in range(2008, 2018):\n",
+    "    files = [f\"data/sf/fhlmc_sf{year}c_loans.txt\", f\"data/sf/fnma_sf{year}c_loans.txt\"]\n",
+    "    loans_year = pd.concat(\n",
+    "        [pd.read_csv(file, sep=r\"\\s+\", header=None, names=cols_pre2018).drop(columns=dropcols_pre2018) for file in files],\n",
+    "        ignore_index=True\n",
+    "    )\n",
+    "    loans_year[\"year\"] = year\n",
+    "    loans_list.append(loans_year)\n",
+    "    print(f\"Processed {year}\")\n",
+    "\n",
+    "loans = pd.concat(loans_list, ignore_index=True)\n",
+    "\n",
+    "# Saving\n",
+    "loans.to_parquet(\"data/loans_data.parquet\", index=False)  \n",
+    "\n",
+    "print(\"Data saved successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loans = pd.read_parquet(\"data/loans_data.parquet\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In addition, we want to have some dictionaries to decode data. For example, in the `loans` dataframe, each metropolitan area is given by its \"MSA code\", which means nothing to us. Rather, we want to know the MSA name."
+    "Next, we load in the census data to give us information about neighborhood demographics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:1: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "<>:1: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "C:\\Users\\emers\\AppData\\Local\\Temp\\ipykernel_65404\\454297998.py:1: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "  msa_codes = pd.read_csv('data/MSA_2023.txt', sep='\\s+=\\s+', header=None, engine='python', names=['msa_code', 'msa_name'])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "msa_codes = pd.read_csv('data/MSA_2023.txt', sep='\\s+=\\s+', header=None, engine='python', names=['msa_code', 'msa_name'])\n",
-    "loans = loans.merge(msa_codes, on='msa_code', how='left')"
+    "cols_tract = ['YEAR', 'TRACTA','U7J001', 'U7J002', 'U7J003', 'U7J004', 'U7J005', 'U7J006', 'U7J007', 'U7J008']\n",
+    "tract_data = pd.read_csv('data/census/nhgis0009_ds258_2020_tract.csv')[cols_tract]\n",
+    "tract_data.rename(columns={\n",
+    "    'YEAR': 'year', \n",
+    "    'TRACTA': 'census_tract', \n",
+    "    'U7J001': 'total_pop', \n",
+    "    'U7J002': 'white', \n",
+    "    'U7J003': 'black', \n",
+    "    'U7J004': 'native_american', \n",
+    "    'U7J005': 'asian', \n",
+    "    'U7J006': 'pacific_islander', \n",
+    "    'U7J007': 'other_race', \n",
+    "    'U7J008': 'two_or_more'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we load in the Zillow data for information about home prices"
    ]
   },
   {
