--- a/project_one.ipynb
+++ b/project_one.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I am using the [**Fannie Mae (FNMA) \\& Freddie Mac (FHLMC)**](https://web.archive.org/web/20240914151448/https://www.fhfa.gov/data/single-family-census-tract-file) data to analyze the demographics of move-ins on a census-tract level. This, with the census-level demographic data **(ACS)**, can provide an estimate of a quantity of minority \"move-ins\". I am seeing the extent to which this has an effect on the appreciation in home values (**Zillow ZHVI**)\n",
+    "I am using the [**Fannie Mae (FNMA) \\& Freddie Mac (FHLMC)**](https://web.archive.org/web/20240914151448/https://www.fhfa.gov/data/single-family-census-tract-file) data to analyze the demographics of move-ins on a census-tract level. This, with the census-level demographic data [**(ACS)**](https://www.nhgis.org/), can provide an estimate of a quantity of minority \"move-ins\". I am seeing the extent to which this has an effect on the appreciation in home values [(**Zillow ZHVI**)](https://www.zillow.com/research/data/)\n",
     "\n",
     "My **y-variable** is census-tract property value appreciation. My main **explanatory variables** are minority move-ins and previous neighborhood demographics. I will be controlling for income."
    ]
@@ -39,13 +39,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import ipumspy.readers as readers # For census data (retrived from IPUMS)"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -200,66 +199,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m year \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m2018\u001b[39m, \u001b[38;5;241m2023\u001b[39m):\n\u001b[0;32m      5\u001b[0m     files \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata/sf/fhlmc_sf\u001b[39m\u001b[38;5;132;01m{\u001b[39;00myear\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124mc_loans.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata/sf/fnma_sf\u001b[39m\u001b[38;5;132;01m{\u001b[39;00myear\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124mc_loans.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m----> 6\u001b[0m     loans_year \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mconcat(\n\u001b[0;32m      7\u001b[0m         [pd\u001b[38;5;241m.\u001b[39mread_csv(file, sep\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124ms+\u001b[39m\u001b[38;5;124m\"\u001b[39m, header\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, names\u001b[38;5;241m=\u001b[39mcols)\u001b[38;5;241m.\u001b[39mdrop(columns\u001b[38;5;241m=\u001b[39mdropcols) \u001b[38;5;28;01mfor\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m files],\n\u001b[0;32m      8\u001b[0m         ignore_index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m      9\u001b[0m     )\n\u001b[0;32m     10\u001b[0m     loans_year[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myear\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m year\n\u001b[0;32m     11\u001b[0m     loans_list\u001b[38;5;241m.\u001b[39mappend(loans_year)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "loans_list = []\n",
-    "\n",
-    "# Loans from 2018-2023 (new system)\n",
-    "for year in range(2018, 2023):\n",
-    "    files = [f\"data/sf/fhlmc_sf{year}c_loans.txt\", f\"data/sf/fnma_sf{year}c_loans.txt\"]\n",
-    "    loans_year = pd.concat(\n",
-    "        [pd.read_csv(file, sep=r\"\\s+\", header=None, names=cols).drop(columns=dropcols) for file in files],\n",
-    "        ignore_index=True\n",
-    "    )\n",
-    "    loans_year[\"year\"] = year\n",
-    "    loans_list.append(loans_year)\n",
-    "    print(f\"Processed {year}\")\n",
-    "print(\"First data done.\")\n",
-    "\n",
-    "# Loans from 2008-2017 (old system)\n",
-    "for year in range(2008, 2018):\n",
-    "    files = [f\"data/sf/fhlmc_sf{year}c_loans.txt\", f\"data/sf/fnma_sf{year}c_loans.txt\"]\n",
-    "    loans_year = pd.concat(\n",
-    "        [pd.read_csv(file, sep=r\"\\s+\", header=None, names=cols_pre2018).drop(columns=dropcols_pre2018) for file in files],\n",
-    "        ignore_index=True\n",
-    "    )\n",
-    "    loans_year[\"year\"] = year\n",
-    "    loans_list.append(loans_year)\n",
-    "    print(f\"Processed {year}\")\n",
-    "\n",
-    "loans = pd.concat(loans_list, ignore_index=True)\n",
-    "\n",
-    "# Saving\n",
-    "loans.to_parquet(\"data/loans_data.parquet\", index=False)  \n",
-    "\n",
-    "print(\"Data saved successfully.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# loans = pd.read_parquet(\"data/loans_data.parquet\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -292,6 +231,42 @@
    "metadata": {},
    "source": [
     "Next, we load in the Zillow data for information about home prices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zhvi = pd.read_csv('data/zhvi/Zip_zhvi_uc_sfrcondo_tier_0.33_0.67_sm_sa_month (1).csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Zillow data is based on zip-code, but all our other data is based on census tract. As a result, we use a Crosswalk File from HUD."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crosswalk = pd.read_excel('data/census/ZIP_TRACT_122024.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loans groupby census tract merge into crosswalk\n",
+    "# crosswalk find high and low minority move-ins, etc?\n",
+    "# merge with zhvi"
    ]
   },
   {
@@ -512,6 +487,14 @@
    "metadata": {},
    "source": [
     "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# References\n",
+    "Steven Manson, Jonathan Schroeder, David Van Riper, Katherine Knowles, Tracy Kugler, Finn Roberts, and Steven Ruggles. IPUMS National Historical Geographic Information System: Version 19.0 [dataset]. Minneapolis, MN: IPUMS. 2024. http://doi.org/10.18128/D050.V19.0"
    ]
   }
  ],
